--- a/src/Components/Certifications/Certifications.css
+++ b/src/Components/Certifications/Certifications.css
@@ -1,4 +1,4 @@
-.cHeader {
+.certHeader {
   color: #110a4a;
   font-size: 70px;
 }
@@ -19,4 +19,10 @@
 
 .cardBorder {
   border: solid red 2px;
+}
+
+@media screen and (max-width: 480px) {
+  .certHeader {
+    font-size: 50px;
+  }
 }
